--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
   </head>
   <body>
     <h1>WELCOME!!!!</h1>
+    <h2>Here is a list of things I like</h2>
+    <ul>
+      <li>Pugs</li>
+      <li>Vikings</li>
+      <li>flying</li>
+    </ul>
   </body>
 </html>
