--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
       <li>Vikings</li>
       <li>flying</li>
     </ol>
+    <p>
+      Hello, parapraph. I'm at a coding workshop for HTML and CSS at Prime Academy. 
+      
+    </p>
   </body>
 </html>
