--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <li>Vikings</li>
       <li>flying</li>
     </ol>
-    <p>
-      Hello, parapraph. I'm at a coding workshop for HTML and CSS at Prime Academy. 
+    <p>Hello, parapraph.</p> 
+    <p> I'm at a coding workshop for HTML and CSS at Prime Academy.</p>
       
     </p>
   </body>
