--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Scott J. Jones</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
     <h1>WELCOME!!!!</h1>
