--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>Vikings</li>
       <li>flying</li>
     </ol>
-    <p>Hello, parapraph.</p> 
+    <p>Hello, paragraph.</p> 
     <p> I'm at a coding workshop for HTML and CSS at Prime Academy.</p>
     <img src="https://s-media-cache-ak0.pinimg.com/236x/60/d2/4f/60d24f3635c7b387f6c3df513b66581e.jpg"/>
       
