--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>WELCOME!!!!</h1>
+    <h2>Websites I've made</h2>
+    <nav>
+       <ul>
+         <li>Google</li>
+         <li>Face</li>
     <h2>Here is a list of things I like</h2>
     <ol>
       <li>Pugs</li>
