--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <h2>Websites I've made</h2>
     <nav>
        <ul>
-         <li>Google</li>
+         <li>a href="https://www.google.com"Google</li>
          <li>Face</li>
+      </ul>
+    </nav>
     <h2>Here is a list of things I like</h2>
     <ol>
       <li>Pugs</li>
