--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <h2>Websites I've made</h2>
     <nav>
        <ul>
-         <li>a href="https://www.google.com"Google</li>
-         <li>Face</li>
+         <li>a href="https://www.google.com"Google</a></li>
+         <li>a href="tacos.html"
+    <li>Face</li>
       </ul>
     </nav>
     <h2>Here is a list of things I like</h2>
