--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html>
+   <head>
+     <title>Scott J. Jones Resume </title>
+  </head>
+  
+  <body>
+    <h1>Scott J. Jones</h1>
+    <p>8368 Copperfield Way Inver Grove Heights, MN 55076 </p>
+    <h2>Websites I've made</h2>
+    <nav>
+       <ul>
+         <li>a href="https://www.google.com"Google</a></li>
+         <li>a href="tacos.html"
+    <li>Face</li>
+      </ul>
+    </nav>
+    <h2>Here is a list of things I like</h2>
+    <ol>
+      <li>Pugs</li>
+      <li>Vikings</li>
+      <li>flying</li>
+    </ol>
+    <p>Hello, paragraph.</p> 
+    <p> I'm at a coding workshop for HTML and CSS at Prime Academy.</p>
+    <img src="https://s-media-cache-ak0.pinimg.com/236x/60/d2/4f/60d24f3635c7b387f6c3df513b66581e.jpg"/>
+      
+    </p>
+  </body>
+</html>
