--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,8 @@
     <h1>Scott J. Jones</h1>
     <p>8368 Copperfield Way Inver Grove Heights, MN 55076 </p>
      <p>507.215.1335</p>
-    <h2>Websites I've made</h2>
+    <h2>Profile</h2>
+     <p>Self-motivated person who thrives in goal-oriented team environments. Looking to transition from a successful career in the legal technology field to technology development.</p>
     <nav>
        <ul>
          <li>a href="https://www.google.com"Google</a></li>
