--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,8 @@
   
   <body>
     <h1>Scott J. Jones</h1>
-    <p>8368 Copperfield Way Inver Grove Heights, MN 55076 </p>
+     <p>8368 Copperfield Way</p>
+       <p>Inver Grove Heights, MN 55076 </p>
      <p>507.215.1335</p>
     <h2>Profile</h2>
      <p>Self-motivated person who thrives in goal-oriented team environments. Looking to transition from a successful career in the legal technology field to technology development.</p>
