--- a/resume.html
+++ b/resume.html
@@ -11,11 +11,15 @@
      <p>507.215.1335</p>
     <h2>Profile</h2>
      <p>Self-motivated person who thrives in goal-oriented team environments. Looking to transition from a successful career in the legal technology field to technology development.</p>
-    <nav>
+    
+     <h3>Professional Experience</h3>
+     
+     <nav>
        <ul>
-         <li>a href="https://www.google.com"Google</a></li>
-         <li>a href="tacos.html"
-    <li>Face</li>
+         <li>Provides legal research and analysis of federal district court opinions against proprietary legal history taxonomy with over 2,000 possible outcomes</li>
+         <li>Processes highly visible Supreme Court decisions in a timely, accurate manner.  Consistently exceeds daily production metrics</li>
+          <li>Reliably produces high-quality work at, or above, the department quality-level agreement</li>
+          <li>Coordinates federal team history efforts on the Supreme Court orders list</li>
       </ul>
     </nav>
     <h2>Here is a list of things I like</h2>
