--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,11 @@
      <p>Self-motivated person who thrives in goal-oriented team environments. Looking to transition from a successful career in the legal technology field to technology development.</p>
     
      <h3>Professional Experience</h3>
+     <p>Thomson Reuters</p>
+<p>Eagan, MN</p>
+<p>August 2009-present</p>
+<p>Sr. KeyCite Analyst</p>
+
      
      <nav>
        <ul>
