--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,8 @@
           <li>Team lead for Florida Administrative Code which held a large competitive advantage over our competitor and revenue stream over $100,000 in each quarter of 2008.</li>
           <li>Team lead for Florida Pending Legislation.</li>
           <li>Coordianted efforts with an international co-sourcing vendor to ensure accurate data/product under weekly deadlines.</li>
-       
+       </ul>
+     </nav>
     <p>Office of the Revisor of Statutes, State of Minnesota</p>
 <p>St. Paul, MN</p>
 <p>January 2008-May 2008</p>
