--- a/resume.html
+++ b/resume.html
@@ -53,6 +53,9 @@
       </ul>
                </nav>
             
-            
+     <h4>Education</h4>
+     <p>South Dakota State University, Brookings, South Dakota</p>   
+     <p>Bachelor of Science in History, May 2007</p>
+     <p>Secondary Education Certification</p>
             </body>
 </html>
