--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <head><link rel="stylesheet" type="text/css" href="style.css">
      <title>Scott J. Jones Resume </title>
   </head>
   
