--- a/resume.html
+++ b/resume.html
@@ -15,10 +15,10 @@
     <h2>Profile</h2>
      <p>Self-motivated person who thrives in goal-oriented team environments. Looking to transition from a successful career in the legal technology field to technology development.</p>
     </div>
-          
+       <div>
+     <p>   
      <h3>Professional Experience</h3>
-     <div>
-     <p>Thomson Reuters
+     Thomson Reuters
 Eagan, MN
 August 2009-present
 Sr. KeyCite Analyst</p>
