--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,9 @@
   <body>
      <div>
     <h1>Scott J. Jones</h1>
-     <p>8368 Copperfield Way
-       Inver Grove Heights, MN 55076 
-     507.215.1335</p>
+     <p>8368 Copperfield Way</p>
+       <p>Inver Grove Heights, MN 55076 </p>
+    <p> 507.215.1335</p>
         </div>
        <div> 
     <h2>Profile</h2>
