--- a/resume.html
+++ b/resume.html
@@ -18,10 +18,11 @@
        <div>
      <p>   
      <h3>Professional Experience</h3>
-     Thomson Reuters
-Eagan, MN
-August 2009-present
-Sr. KeyCite Analyst</p>
+     <p> Thomson Reuters</p>
+     
+<p> Eagan, MN</p>
+<p> August 2009-present</p>
+<p> Sr. KeyCite Analyst</p>
 
      
      <nav>
