--- a/resume.html
+++ b/resume.html
@@ -35,10 +35,10 @@
     </nav>
         </div>
    <div>
-     <p>Thomson Reuters
-Eagan, MN
-June 2008-August 2009 
-Publishing Specialist</p>
+     <p>Thomson Reuters</p>
+<p>Eagan, MN</p>
+<p>June 2008-August 2009 </p>
+<p>Publishing Specialist</p>
 
     <nav>
        <ul>
@@ -50,10 +50,10 @@ Publishing Specialist</p>
       </div>
     
      <div>
-     <p>Office of the Revisor of Statutes, State of Minnesota
-St. Paul, MN
-January 2008-May 2008
-Drafting and Editing Assistant</p>
+     <p>Office of the Revisor of Statutes, State of Minnesota</p>
+<p>St. Paul, MN</p>
+<p>January 2008-May 2008</p>
+<p>Drafting and Editing Assistant</p>
          <nav>
             <ul>
        <li>Drafting and proofing of bills, amendments and resolutions.</li>
