--- a/resume.html
+++ b/resume.html
@@ -65,9 +65,11 @@
                </nav>
        <div>     
      <h4>Education</h4>
-     <p>South Dakota State University, Brookings, South Dakota   
-     Bachelor of Science in History, May 2007
-          Secondary Education Certification</p>
+     <p>South Dakota State University</p>
+        <p>Brookings, South Dakota   </p>
+    <p> Bachelor of Science in History</p> 
+        <p>May 2007</p>
+          <p>Secondary Education Certification</p>
             </div>
           </body>
 </html>
