--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
      <div>
         
         <br>
-     <p>Office of the Revisor of Statutes, State of Minnesota</p>
+     <p1>Office of the Revisor of Statutes, State of Minnesota</p1>
 <p>St. Paul, MN</p>
 <p>January 2008-May 2008</p>
 <p>Drafting and Editing Assistant</p>
