--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
        <ul>
           <li>Team lead for Florida Administrative Code which held a large competitive advantage over our competitor and revenue stream over $100,000 in each quarter of 2008.</li>
           <li>Team lead for Florida Pending Legislation.</li>
-          <li>Coordianted efforts with an international co-sourcing vendor to ensure accurate data/product under weekly deadlines.</li>
+          <li>Coordinated efforts with an international co-sourcing vendor to ensure accurate data/product under weekly deadlines.</li>
        </ul>
      </nav>
       </div>
